--- a/frontend/android/app/src/main/res/layout/activity_add_new_job_opening.xml
+++ b/frontend/android/app/src/main/res/layout/activity_add_new_job_opening.xml
@@ -35,14 +35,14 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/placeholder" />
+            app:srcCompat="@drawable/image_placeholder" />
 
         <Button
             android:id="@+id/updatePicture"
             android:layout_width="100dp"
             android:layout_height="35dp"
             android:layout_marginTop="8dp"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorButtonBackground"
             android:text="Update"
             android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
@@ -116,7 +116,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/et_login"
+            android:background="@drawable/spinner_style"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -181,7 +181,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/et_login"
+            android:background="@drawable/spinner_style"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -279,7 +279,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/et_login"
+            android:background="@drawable/spinner_style"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -292,7 +292,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/et_login"
+            android:background="@drawable/spinner_style"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -356,7 +356,7 @@
             android:id="@+id/createJobOpeningBtn"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorButtonBackground"
             android:text="@string/createJobOpeningText"
             android:textColor="#F2F2F2"
             android:textSize="18sp"
