--- a/frontend/android/app/src/main/res/layout/alert_progress.xml
+++ b/frontend/android/app/src/main/res/layout/alert_progress.xml
@@ -11,7 +11,7 @@
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:indeterminate="true"
-        app:cpb_color="@color/colorPrimaryDark"
+        app:cpb_color="@color/colorProgressLoader"
         app:cpb_rotation_speed="1.0"
         app:cpb_sweep_speed="1.0"
         app:cpb_stroke_width="9dp"
