--- a/frontend/android/app/src/main/res/layout/include_activity_create_candidate_profile.xml
+++ b/frontend/android/app/src/main/res/layout/include_activity_create_candidate_profile.xml
@@ -21,14 +21,14 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/placeholder" />
+            android:background="@drawable/image_placeholder" />
 
         <Button
             android:id="@+id/updatePicture"
             android:layout_width="100dp"
             android:layout_height="35dp"
             android:layout_marginTop="8dp"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorButtonBackground"
             android:text="Update"
             android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,6 +88,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ETEducation" />
 
+        <Spinner
+            android:id="@+id/spinnerJobType"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/spinner_style"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ETWorkExperience" />
+
         <TextView
             android:id="@+id/plainText"
             android:layout_width="wrap_content"
@@ -95,13 +108,13 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif"
-            android:text="Please provide your top 3 skills"
+            android:text="Please provide your skills"
             android:textAlignment="viewStart"
             android:textColor="@color/colorPrimary"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ETWorkExperience" />
+            app:layout_constraintTop_toBottomOf="@+id/spinnerJobType" />
 
         <EditText
             android:id="@+id/ETSkillOne"
@@ -184,7 +197,7 @@
             android:background="@drawable/et_login"
             android:drawableLeft="@drawable/baseline_whatshot_black_24"
             android:drawablePadding="10dp"
-            android:hint="Optional Additional Skill"
+            android:hint="Additional Skills"
             android:paddingLeft="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -227,6 +240,25 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ETDateBirth" />
 
+        <EditText
+            android:id="@+id/ETmobileNo"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/et_login"
+            android:drawableStart="@drawable/baseline_contact_phone_black_24"
+            android:drawablePadding="10dp"
+            android:hint="@string/contactPhoneText"
+            android:inputType="text|phone"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:textColorHint="#6F7070"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ETAboutMe" />
+
         <Button
             android:id="@+id/btnSubmit"
             android:layout_width="match_parent"
@@ -246,7 +278,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ETAboutMe" />
+            app:layout_constraintTop_toBottomOf="@+id/ETmobileNo" />
 
         <Spinner
             android:id="@+id/spinnerPlace"
