--- a/frontend/android/app/src/main/res/drawable/spinner_style.xml
+++ b/frontend/android/app/src/main/res/drawable/spinner_style.xml
@@ -5,7 +5,7 @@
         <item>
             <shape>
                 <solid
-                    android:color="@color/colorWhite">
+                    android:color="#D9E0E7">
                 </solid>
 
                 <corners android:radius="3dp" />
