--- a/frontend/android/app/src/main/res/layout/activity_candidate_detail.xml
+++ b/frontend/android/app/src/main/res/layout/activity_candidate_detail.xml
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".activities.AddNewJobOpening"
-            android:background="@color/colorAccent">
+            android:background="@color/colorAppBackground">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -50,7 +50,7 @@
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:background="@color/colorPrimaryDark" />
+                    android:background="@drawable/image_placeholder" />
 
                 <TextView
                     android:id="@+id/TVPreCompanyName"
@@ -62,7 +62,7 @@
                     android:layout_marginEnd="16dp"
                     android:text="Candidate Name:"
                     android:paddingLeft="15dp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     android:textSize="18sp"
                     android:gravity="center_vertical"
                     app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +78,7 @@
                     android:paddingLeft="5dp"
                     android:paddingRight="15dp"
                     android:text="@string/nameOfCompanyText"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/TVPreDesiredWorkExperience"
@@ -98,7 +98,7 @@
                     android:textStyle="bold|italic"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/TVPreCompanyName" />
@@ -116,7 +116,7 @@
                     android:text="Bio"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/TVPreJobDescription" />
@@ -130,7 +130,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="15dp"
                     android:layout_height="3dp"
-                    android:background="@color/colorPrimaryDark" />
+                    android:background="@android:color/black" />
 
                 <TextView
                     android:id="@+id/TVDesiredCandidateProfile"
@@ -158,7 +158,7 @@
                     android:gravity="center_vertical"
                     android:text="Qualification:"
                     android:paddingLeft="15dp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/TVDesiredCandidateProfile" />
 
@@ -172,7 +172,7 @@
                     android:gravity="center_vertical"
                     android:paddingRight="15dp"
                     android:text="Qualifiaction"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/TVPreDesiredWorkExperience"
@@ -190,7 +190,7 @@
                     android:gravity="center_vertical"
                     android:text="Work Experience: "
                     android:paddingLeft="15dp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/TVDesiredQualification" />
 
@@ -206,7 +206,7 @@
                     android:paddingLeft="5dp"
                     android:paddingRight="15dp"
                     android:text=""
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/TVPreDesiredWorkExperience"
@@ -224,7 +224,7 @@
                     android:gravity="center_vertical"
                     android:text="Location: "
                     android:paddingLeft="15dp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/TVDesiredWorkExperience" />
 
@@ -240,7 +240,7 @@
                     android:paddingLeft="5dp"
                     android:paddingRight="15dp"
                     android:text="@string/placeOfWorkText"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/TVPreDesiredWorkExperience"
@@ -255,7 +255,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="15dp"
                     android:layout_height="3dp"
-                    android:background="@color/colorPrimaryDark" />
+                    android:background="@android:color/black" />
 
 
                 <TextView
@@ -285,7 +285,7 @@
                     android:text="@string/skillText"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/TVDesiredSkills" />
@@ -303,7 +303,7 @@
                     android:text="@string/skillText"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/TVSkill1" />
@@ -321,7 +321,7 @@
                     android:text="@string/skillText"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/TVSkill2" />
@@ -335,7 +335,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="15dp"
                     android:layout_height="3dp"
-                    android:background="@color/colorPrimaryDark" />
+                    android:background="@android:color/black" />
 
                 <TextView
                     android:id="@+id/TVDesiredLanguages"
@@ -364,7 +364,7 @@
                     android:text="@string/languageText"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/TVDesiredLanguages" />
@@ -383,7 +383,7 @@
                     android:text="@string/languageText"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@android:color/black"
                     app:layout_constraintBottom_toTopOf="@+id/LLButtons"
                     app:layout_constraintEnd_toEndOf="@id/LLButtons"
                     app:layout_constraintStart_toStartOf="parent"
