--- a/frontend/android/app/src/main/res/layout/activity_sign_up.xml
+++ b/frontend/android/app/src/main/res/layout/activity_sign_up.xml
@@ -153,7 +153,7 @@
         android:id="@+id/createMyAccountBtn"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorButtonBackground"
         android:text="@string/createAccountBtn"
         android:textColor="#F2F2F2"
         android:textSize="18sp"
