--- a/frontend/android/app/src/main/res/layout/job_openings_list_item.xml
+++ b/frontend/android/app/src/main/res/layout/job_openings_list_item.xml
@@ -7,7 +7,7 @@
     app:cardCornerRadius="4dp">
 
     <RelativeLayout
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorCardBackgrounds"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="4dp">
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/IVJobOpening"
-            android:textColor="@color/colorWhite"
+            android:textColor="@android:color/black"
             android:paddingLeft="8dp"
             android:text="@string/jobTitleText"
             android:textSize="20sp"
@@ -35,9 +35,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/TVJobTitle"
-            android:textColor="@color/colorWhite"
+            android:textColor="@android:color/black"
             android:layout_toEndOf="@+id/IVJobOpening"
-            android:drawableStart="@drawable/baseline_place_white_24"
+            android:drawableStart="@drawable/baseline_place_black_24"
             android:drawablePadding="5dp"
             android:paddingLeft="4dp"
             android:text="@string/placeOfWorkText" />
@@ -49,8 +49,8 @@
             android:layout_below="@+id/TVPlaceOfWork"
             android:drawablePadding="5dp"
             android:layout_toEndOf="@id/IVJobOpening"
-            android:textColor="@color/colorWhite"
-            android:drawableStart="@drawable/baseline_whatshot_white_24"
+            android:textColor="@android:color/black"
+            android:drawableStart="@drawable/baseline_whatshot_black_24"
             android:paddingLeft="4dp"
             android:text="Preferred Skill" />
 
@@ -62,7 +62,7 @@
             android:layout_alignParentRight="true"
             android:background="#00FFFFFF"
             app:srcCompat="@android:drawable/ic_menu_edit"
-            android:drawableTint="@color/colorWhite" />
+            android:drawableTint="@android:color/black" />
 
         <ImageButton
             android:id="@+id/imageButtonDelete"
@@ -72,7 +72,7 @@
             android:layout_alignParentRight="true"
             android:background="#00FFFFFF"
             app:srcCompat="@android:drawable/ic_menu_delete"
-            android:drawableTint="@color/colorWhite" />
+            android:drawableTint="@android:color/black" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
