--- a/frontend/android/app/src/main/res/values/colors.xml
+++ b/frontend/android/app/src/main/res/values/colors.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0F375E</color>
-    <color name="colorPrimaryDark">#0F375E</color>
-    <color name="colorAccent">#FBC02D</color>
+    <color name="colorPrimary">#001540</color>
+    <color name="colorPrimaryDark">#001540</color>
+    <color name="colorAccent">#01579b</color>
+    <color name="colorDarkAccent">#A9A9A9</color>
     <color name="colorGrey">#D9E0E7</color>
+    <color name="colorCardBackgrounds">#C0C0C0</color>
+    <color name="colorAppBackground">#DEDEDE</color>
+    <color name="colorButtonBackground">#001540</color>
+    <color name="colorButtonBackgroundSel">#DEDEDE</color>
+    <color name="colorProgressLoader">#001540</color>
     <color name="colorWhite">#FFFFFF</color>
 
     //PROGRESS BAR
@@ -63,4 +69,5 @@
     <color name="holo_green_dark">#669900</color>
     <color name="holo_purple_dark">#9933cc</color>
     <color name="holo_red_dark">#cc0000</color>
+    <color name="colorDarkGrey">#808080</color>
 </resources>
