--- a/frontend/android/app/src/main/res/menu/candidate_drawer.xml
+++ b/frontend/android/app/src/main/res/menu/candidate_drawer.xml
@@ -13,6 +13,10 @@
             android:icon="@drawable/baseline_edit_white_18"
             android:title="@string/menu_edit_profile" />
         <item
+            android:id="@+id/nav_view_matches"
+            android:icon="@drawable/baseline_recent_actors_white_18"
+            android:title="@string/viewMatchesText" />
+        <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/baseline_account_circle_white_18"
             android:title="@string/menu_logout" />
