View Matches For Candidate
Added nav bar/hamburger functionality to screen.

--- a/frontend/android/app/src/main/res/layout/activity_candidate_matchviewer.xml
+++ b/frontend/android/app/src/main/res/layout/activity_candidate_matchviewer.xml
@@ -43,6 +43,6 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark"
         android:background="@color/colorPrimaryDark"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/company_drawer" />
+        app:menu="@menu/candidate_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
